<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <include layout="@layout/actionbar"
        android:id="@+id/actionbarLogin"></include>


    <TextView
        android:id="@+id/txtinfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_your_account"
        android:layout_below="@id/actionbarLogin"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textColor="@android:color/black"></TextView>

    <TextView
        android:id="@+id/txtinfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/txtinfo1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"></TextView>

    <EditText
        android:id="@+id/txtemaillogin"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtinfo2"
        android:hint="@string/email"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"></EditText>
    <EditText
        android:id="@+id/txtpasswordlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtemaillogin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"></EditText>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:background="@color/purple_500"
        android:textColor="@android:color/white"
        ></Button>


</RelativeLayout>